--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,21 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"],
+      "@assets/*": ["./src/assets/*"],
+
+      "@components/*": ["./src/components/*"],
+      "@api/*": ["./src/api/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/middleware.ts",
+    "src/public/locales/vi/common.js"
+  ],
   "exclude": ["node_modules"]
 }
